--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,11 +1,8 @@
-@import "fonts";
-@import "rouge-github";
-
 body {
   background-color: #fff;
   padding:50px;
-  font: 14px/1.5 "Noto Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
-  color:#727272;
+  font: 14px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  color:#595959;
   font-weight:400;
 }
 
@@ -24,24 +21,26 @@ h1, h2, h3 {
 
 h1 {
   font-size:28px;
+  font-weight: 500;
 }
 
 h2 {
   color:#393939;
+  font-weight: 500;
 }
 
 h3, h4, h5, h6 {
   color:#494949;
+  font-weight: 500;
 }
 
 a {
-  color:#267CB9;
+  color:#39c;
   text-decoration:none;
 }
 
-a:hover, a:focus {
+a:hover {
   color:#069;
-  font-weight: bold;
 }
 
 a small {
@@ -93,7 +92,7 @@ th, td {
 
 dt {
   color:#444;
-  font-weight:700;
+  font-weight:500;
 }
 
 th {
@@ -104,20 +103,6 @@ img {
   max-width:100%;
 }
 
-kbd {
-  background-color: #fafbfc;
-  border: 1px solid #c6cbd1;
-  border-bottom-color: #959da5;
-  border-radius: 3px;
-  box-shadow: inset 0 -1px 0 #959da5;
-  color: #444d56;
-  display: inline-block;
-  font-size: 11px;
-  line-height: 10px;
-  padding: 3px 5px;
-  vertical-align: middle;
-}
-
 header {
   width:270px;
   float:left;
@@ -125,7 +110,7 @@ header {
   -webkit-font-smoothing:subpixel-antialiased;
 }
 
-ul.downloads {
+header ul {
   list-style:none;
   height:40px;
   padding:0;
@@ -135,51 +120,50 @@ ul.downloads {
   width:270px;
 }
 
-.downloads li {
+header li {
   width:89px;
   float:left;
   border-right:1px solid #e0e0e0;
   height:40px;
 }
 
-.downloads li:first-child a {
+header li:first-child a {
   border-radius:5px 0 0 5px;
 }
 
-.downloads li:last-child a {
+header li:last-child a {
   border-radius:0 5px 5px 0;
 }
 
-.downloads a {
+header ul a {
   line-height:1;
   font-size:11px;
-  color:#676767;
+  color:#999;
   display:block;
   text-align:center;
   padding-top:6px;
   height:34px;
 }
 
-.downloads a:hover, .downloads a:focus {
-  color:#675C5C;
-  font-weight:bold;
+header ul a:hover {
+  color:#999;
 }
 
-.downloads ul a:active {
+header ul a:active {
   background-color:#f0f0f0;
 }
 
 strong {
   color:#222;
-  font-weight:700;
+  font-weight:500;
 }
 
-.downloads li + li + li {
+header ul li + li + li {
   border-right:none;
   width:89px;
 }
 
-.downloads a strong {
+header ul a strong {
   font-size:14px;
   display:block;
   color:#222;
@@ -268,11 +252,11 @@ footer {
     padding:15px;
   }
 
-  .downloads {
+  header ul {
     width:99%;
   }
 
-  .downloads li, .downloads li + li + li {
+  header li, header ul li + li + li {
     width:33%;
   }
 }
